fix spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,7 +25,7 @@ header {
 }
 
 footer {
-	margin: 2rem 0 0 0;
+	margin: 1.5rem 0 0 0;
 }
 h1 {
 	font-size: 3rem;
@@ -76,6 +76,7 @@ h1 {
 	background-color: white;
 	padding: 0 1rem;
 	border-radius: 0.4rem;
+	margin-bottom: 0.5rem;
 }
 .instructions p {
 	margin: 0;
